--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
 <body>
-  <h1 id="title">SHADI KA BAND🥁</h1>
+  <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -24,7 +24,7 @@
 <script src="index.js" charset="utf-8"></script>
 
 <footer>
-  I LOVE INDIA.
+  Made by Sudhanshu shekhar jha.
 </footer>
 </body>
 </html>
